--- a/index.html
+++ b/index.html
@@ -81,136 +81,4 @@
     .btn-ghost{border:2px solid #e5e5e5;color:#222;background:#fff;border-radius:999px;padding:.82rem 1.1rem;font-weight:800;text-decoration:none}
 
     /* Footer */
-    footer{background:#121212;color:#fff;text-align:center;padding:1.1rem 1rem;font-size:.92rem}
-  </style>
-</head>
-<body>
-  <header>
-    <a class="brand" href="index.html">
-      <img src="assets/images/osu-daytraders-logo.png" alt="OSU Day Traders Logo">
-      <span>OSU Day Traders</span>
-    </a>
-    <nav>
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="resources.html">Resources</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="applications.html">Applications</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- HERO -->
-  <section class="hero">
-    <div class="hero-inner">
-      <h1>Learn. Trade. Grow.</h1>
-      <p>The official day trading community at The Ohio State University. Workshops, strategy labs, and a process-first culture built around risk, review, and accountability.</p>
-      <div class="btn-row">
-        <a class="btn btn-white" href="applications.html">Join the club</a>
-        <a class="btn btn-outline" href="events.html">See upcoming events</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- EDUCATION-FOCUSED SECTION -->
-  <section class="section">
-    <h2>What we teach</h2>
-
-    <div class="edu-grid">
-      <article class="edu-card">
-        <span class="tag">Foundations</span>
-        <h3>Market Basics & Platforms</h3>
-        <p>Order types, market structure, timeframes, and platform setup so beginners can place clean, intentional trades.</p>
-        <ul class="tiny-list">
-          <li>Order flow, liquidity, and levels</li>
-          <li>Paper trading and journaling 101</li>
-        </ul>
-      </article>
-
-      <article class="edu-card">
-        <span class="tag">Strategies</span>
-        <h3>High-probability Setups</h3>
-        <p>Opening drive, pullback to VWAP, liquidity sweep, and range-break retests with clear rules and invalidations.</p>
-        <ul class="tiny-list">
-          <li>Entry triggers and invalidations</li>
-          <li>Pre/post-trade checklists</li>
-        </ul>
-      </article>
-
-      <article class="edu-card">
-        <span class="tag">Risk</span>
-        <h3>Position Sizing & Process</h3>
-        <p>How much to risk, where to place stops, and how to scale. Survival math over hero trades.</p>
-        <ul class="tiny-list">
-          <li>Fixed-fraction vs ATR sizing</li>
-          <li>Daily loss limits & review cadence</li>
-        </ul>
-      </article>
-
-      <article class="edu-card">
-        <span class="tag">Practice</span>
-        <h3>Strategy Lab & Reviews</h3>
-        <p>Backtests, live paper sessions, and weekly debriefs to turn notes into muscle memory.</p>
-        <ul class="tiny-list">
-          <li>Group backtests and dashboards</li>
-          <li>Journal audits and accountability</li>
-        </ul>
-      </article>
-
-      <article class="edu-card">
-        <span class="tag">Options</span>
-        <h3>Options Basics & Risk</h3>
-        <p>Greeks, premium decay, and how to avoid dumb lottery-ticket trades. Simple, hedge-aware plays only.</p>
-        <ul class="tiny-list">
-          <li>Defined-risk vs. undefined-risk</li>
-          <li>When NOT to trade options</li>
-        </ul>
-      </article>
-
-      <article class="edu-card">
-        <span class="tag">Tools</span>
-        <h3>Data, Journals & Dashboards</h3>
-        <p>Build a personal edge database: logs, tags, and stats that actually change behavior.</p>
-        <ul class="tiny-list">
-          <li>Review templates and KPIs</li>
-          <li>Automation ideas and exports</li>
-        </ul>
-      </article>
-    </div>
-
-    <div class="center">
-      <a class="btn btn-gray" href="resources.html">Explore the learning path</a>
-    </div>
-  </section>
-
-  <!-- NEXT UPCOMING EVENT -->
-  <section class="next-wrap">
-    <h2>Next upcoming event</h2>
-    <div class="event-card">
-      <div style="text-align:center">
-        <span class="pill">Weekly</span>
-      </div>
-      <h3 class="event-title">Weekly Meeting</h3>
-
-      <div class="meta-list">
-        <div class="meta-row"><b>When:</b><span>Monday, November 17 · 6:00 PM ET</span></div>
-        <div class="meta-row"><b>Where:</b><span>Virtual (Zoom)</span></div>
-      </div>
-
-      <p class="desc">Market rundown, risk review, and a breakout scalp workflow.</p>
-
-      <div class="event-actions">
-        <a class="btn btn-red" target="_blank" href="https://osu.zoom.us/meeting/register/OBKK4x6ARW-nLENvzqbGAg">Register on Zoom</a>
-        <a class="btn btn-ghost" target="_blank" href="https://calendar.google.com">Add to Google Calendar</a>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <p>&copy; <span id="year"></span> OSU Day Traders • Student Organization</p>
-  </footer>
-  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
-</body>
-</html>
+    footer{background:#1212
